--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rick and Morty</title>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/cabecalho.css">
 </head>
 <body>
-    
+    <header>
+        <div class="cabecalho__container">
+            <div>
+                <a class="cabecalho__logo" href="index.html"><img src="img/rick-and-morty.png" alt="logo rick and morty"></a>
+            </div>
+            <div class="cabecalho__links">
+                <a href="#">Página Inicial</a>
+                <a href="#">Episódios</a>
+                <a href="#">Personagens</a>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
