--- a/index.html
+++ b/index.html
@@ -26,12 +26,22 @@
 </body>
     <main>
         <section class="principal__container">
-            Digite o id do personagem que quer saber mais sobre: <input type="text" id="input-id" placeholder="id"><button id="botao-personagem"type="button">Buscar</button>
+            Digite o id do personagem que quer saber mais sobre: <input type="text" id="input-id-personagem" placeholder="id"><button id="botao-personagem"type="button">Buscar</button>
             <table class="tabela__personagem">
                 <tbody class="tabela__personagem-tbody">
                 </tbody>
             </table>
         </section>
+
+        <section class="principal__container">
+            Digite o id do episódio que quer saber mais sobre: <input type="text" id="input-id-episodio" placeholder="id"><button id="botao-episodio"type="button">Buscar</button>
+            <table class="tabela__episodio">
+                <tbody class="tabela__episodio-tbody">
+                </tbody>
+            </table>
+        </section>
+
+
     <script src="js/index.js"></script>
     <script src="js/classes.js"></script>
     </main>
