alterando retorno de dados para o usuário de tabela para div

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <main>
         <section class="principal__container">
             Digite o id do personagem que quer saber mais sobre: <input type="text" id="input-id-personagem" placeholder="id"><button id="botao-personagem"type="button">Buscar</button>
+            <div class="principal__personagens">
+
+            </div>
             <table class="tabela__personagem">
                 <tbody class="tabela__personagem-tbody">
                 </tbody>
