--- a/index.html
+++ b/index.html
@@ -28,16 +28,14 @@
         <section class="principal__container">
             Digite o id do personagem que quer saber mais sobre: <input type="text" id="input-id-personagem" placeholder="id"><button id="botao-personagem"type="button">Buscar</button>
             <div class="principal__personagens">
-
             </div>
-            <table class="tabela__personagem">
-                <tbody class="tabela__personagem-tbody">
-                </tbody>
-            </table>
-        </section>
 
         <section class="principal__container">
             Digite o id do episódio que quer saber mais sobre: <input type="text" id="input-id-episodio" placeholder="id"><button id="botao-episodio"type="button">Buscar</button>
+           
+           <div class="principal__episodios">
+
+           </div>
             <table class="tabela__episodio">
                 <tbody class="tabela__episodio-tbody">
                 </tbody>
