--- a/index.html
+++ b/index.html
@@ -26,20 +26,14 @@
 </body>
     <main>
         <section class="principal__container">
-            Digite o id do personagem que quer saber mais sobre: <input type="text" id="input-id-personagem" placeholder="id"><button id="botao-personagem"type="button">Buscar</button>
+            <span>Digite o id do personagem: <input type="text" id="input-id-personagem" placeholder="id" onfocus="this.value=''"><button id="botao-personagem"type="button">Buscar</button></span> 
             <div class="principal__personagens">
             </div>
-
+        </section>
         <section class="principal__container">
-            Digite o id do episódio que quer saber mais sobre: <input type="text" id="input-id-episodio" placeholder="id"><button id="botao-episodio"type="button">Buscar</button>
-           
+            <span>Digite o id do episódio: <input type="text" id="input-id-episodio" placeholder="id" onfocus="this.value=''"><button id="botao-episodio"type="button">Buscar</button></span>
            <div class="principal__episodios">
-
            </div>
-            <table class="tabela__episodio">
-                <tbody class="tabela__episodio-tbody">
-                </tbody>
-            </table>
         </section>
 
 
